<resources>
    <string name="app_name">Ex8</string>
    <string name="name">Name :</string>
    <string name="firstName">First Name :</string>
    <string name="phone">Phone Number :</string>
    <string name="CP">CP :</string>
    <string name="N">N° :</string>
    <string name="Street">Street : </string>
    <string name="City">City :</string>
    <string name="Modify">MODIFY</string>
    <string name="Return">RETURN</string>


</resources>
